@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[jan] Purge old tasks from versions < 2.3 too.
 [jan] Allow to synchronize shared task lists via CalDAV (Request #12380).
 [jan] Add script to import tasks from Open-Xchange.
 [jan] Add recurrence controls to basic view (Request #11545).
